# raptor

./: .gitmodules  CMakeLists.txt  README.md  interleaved_bloom_filter.hpp
.github/workflows/: ci_cpm.yml
cmake/: package-lock.cmake
cpm/: CMakeLists.txt
include/raptor/: file_reader.hpp  hierarchical_interleaved_bloom_filter.hpp  index.hpp  syncmer.hpp
include/raptor/argument_parsing/: build_arguments.hpp  update_arguments.hpp  update_parsing.hpp  validators.hpp
include/raptor/search/: search_single.hpp
include/raptor/update/: delete_user_bins.hpp  dump_index.hpp  insert_user_bin.hpp  insertions.hpp  load_hibf.hpp  rebuild.hpp  update.hpp
src/: CMakeLists.txt  evaluation.cpp  generate_reads.cpp  raptor.cpp  upgrade.cpp
src/argument_parsing/: CMakeLists.txt  build_parsing.cpp  parse_bin_path.cpp  search_parsing.cpp  update_parsing.cpp
src/layout/: raptor_layout.cpp
src/update/: CMakeLists.txt  README.md  delete_user_bins.cpp  dump_index.cpp  insert_user_bin.cpp  insertions.cpp  load_hibf.cpp  raptor_update.cpp  rebuild.cpp
src/update/insert/: compute_kmers.cpp  find_empty_bin_idx.cpp  find_ibf_size_splitting.cpp  fwd.hpp  get_location.cpp  insert_into_ibf.cpp  insert_tb_and_parents.cpp  is_fpr_exceeded.hpp  max_elements.cpp  max_ibf_sizes.cpp  required_technical_bins.cpp  strong_types.hpp  update_bookkeeping.cpp
test/benchmark/: CMakeLists.txt  lzcount_benchmark.cpp
test/unit/cli/: CMakeLists.txt
util/Genome_Biology/plots/: fig_4_many.csv  fig_5_refseq.csv  fig_6_acc_v2.csv
util/newer/: config.sh  run.sh
util/partitioned/: config.sh  run.sh
(+16 files in other folders)
